<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Player">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="344dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/play2"
                android:layout_width="133dp"
                android:layout_height="74dp"
                android:gravity="center"
                android:text="@string/p1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p1_name"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="133dp"
                android:layout_height="74dp"
                android:gravity="center"
                android:text="@string/p2"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p2_name"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="133dp"
                android:layout_height="74dp"
                android:gravity="center"
                android:text="@string/seeries"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/series"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_marginTop="10dp"
                android:layout_span="2"
                android:onClick="act1"
                android:text="@string/ser"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="208dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="248dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:srcCompat="@drawable/x" />
</androidx.constraintlayout.widget.ConstraintLayout>